--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,12 +1,13 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/system-sales?serverTimezone=UTC
+    #url: jdbc:mysql://localhost:3306/system-sales?serverTimezone=UTC
+    url: jdbc:mysql://dehwqyoviirr1prt:ms4ftbhysy97u65x@n2o93bb1bwmn0zle.chr7pe7iynqr.eu-west-1.rds.amazonaws.com:3306/wszkt68lcslqibn4?serverTimezone=UTC
    #url: jdbc:mysql://170.249.205.58:3306/tqmzambell_warehouse?serverTimezone=UTC
-    username: root
-   # username: tqmzambell_jmd
-    #password: jmd_mysql
-    password: jhona_mysql
+    #username: root
+    username: dehwqyoviirr1prt
+    password: ms4ftbhysy97u65x
+    #password: jhona_mysql
   jpa:
     hibernate:
       #ddl-auto: create-drop
