--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,7 +12,7 @@ spring:
     hibernate:
       #ddl-auto: create-drop
       ddl-auto: none
-    show-sql: true
+    #show-sql: true
     properties:
       hibernate:
         enable_lazy_load_no_trans: true
