--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,11 +2,11 @@ spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     #url: jdbc:mysql://localhost:3306/system-sales?serverTimezone=UTC
-    url: jdbc:mysql://dehwqyoviirr1prt:ms4ftbhysy97u65x@n2o93bb1bwmn0zle.chr7pe7iynqr.eu-west-1.rds.amazonaws.com:3306/wszkt68lcslqibn4?serverTimezone=UTC
-   #url: jdbc:mysql://170.249.205.58:3306/tqmzambell_warehouse?serverTimezone=UTC
+    #url: jdbc:mysql://dehwqyoviirr1prt:ms4ftbhysy97u65x@n2o93bb1bwmn0zle.chr7pe7iynqr.eu-west-1.rds.amazonaws.com:3306/wszkt68lcslqibn4?serverTimezone=UTC
+    url: jdbc:mysql://170.249.205.58:3306/tqmzambell_system?serverTimezone=UTC
     #username: root
-    username: dehwqyoviirr1prt
-    password: ms4ftbhysy97u65x
+    username: tqmzambell_test
+    password: jmd_test
     #password: jhona_mysql
   jpa:
     hibernate:
